--- a/views/include.pug
+++ b/views/include.pug
@@ -1,6 +1,6 @@
 html(lang="ko")
 	include ./inc/header.pug
-	body
+	body(style="background-color: gray")
 		include ./inc/navi.pug
 		div.container
 			h1= `${name} 안녕하세요, PUG`
