--- a/views/inc/header.pug
+++ b/views/inc/header.pug
@@ -1,3 +1,4 @@
 head
 	title= title
+	meta(charset="utf-8")
 	link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
