--- a/views/sql/insert.pug
+++ b/views/sql/insert.pug
@@ -7,8 +7,11 @@ html(lang="ko")
 			//- mt, mb, ml, mr, mx, my, pt, pb, pl, pr, px, py
 			//- bootstrap: 기본폰트:16px=1rem / -1(0.25rem, 4px), -2(0.5rem, 8px)
 			//- -3(1rem, 16px), -4(1.5rem, 24px), -5(2rem, 32px), -auto(mx-auto => margin: 0 auto)
-			div.jumbotron.mb-3= `${tit} - ${subTit}`
-			form(name="sendForm" action="/insert" method="post" onsubmit="return sendFormFn(this)")
+			div.jumbotron.my-3
+				h1= tit
+					span= " - "
+					small= subTit
+			form(name="sendForm" action="/insert/save" method="post" onsubmit="return sendFormFn(this)")
 				table.table.table-bordered.table-hover
 					thead.thead-dark
 						tr
