--- a/views/sql/insert.pug
+++ b/views/sql/insert.pug
@@ -11,7 +11,7 @@ html(lang="ko")
 				h1= tit
 					span= " - "
 					small= subTit
-			form(name="sendForm" action="/insert/save" method="post" onsubmit="return sendFormFn(this)")
+			form(name="sendForm" action="/insert/save-pool" method="post")
 				table.table.table-bordered.table-hover
 					thead.thead-dark
 						tr
