--- a/views/inc/navi.pug
+++ b/views/inc/navi.pug
@@ -1,6 +1,8 @@
 .top.d-flex.justify-content-between.bg-dark.text-light
-	.logo.p-3 로고
+	.logo.p-3 
+		a(href="/") 로고
 	.navis.d-flex
-		.navi.p-3 페이지1
-		.navi.p-3 페이지2
-		.navi.p-3 페이지3
+		.navi.p-3
+			a(href="/user/li") 회원리스트
+		.navi.p-3
+			a(href="/user/wr") 회원등록
