--- a/views/sql/list.pug
+++ b/views/sql/list.pug
@@ -25,5 +25,7 @@ html(lang="ko")
 							td= item["wdate"]
 							td
 								button.btn.btn-danger.btn-sm(onclick=`location.href='/user/rm/${item["id"]}';`) 삭제
+								button.btn.btn-success.btn-sm(onclick=`location.href='/user/up/${item["id"]}';`) 수정
+
 
 					
